# Vogen

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  blog.md  openenv.yaml  pyproject.toml  requirements.txt
client/: models.py  vogen_client.py
data/: critic_personas.json  cultural_priors.json  seed_wardrobe.json
results/: metrics.json
server/: app.py  critics.py  curator.py  env.py  runway.py  schemas.py  task.py
server/rubrics/: __init__.py  calibration.py  critic_score.py  difficulty.py  justification.py  novelty.py
server/safety/: anticheat.py  sandbox.py
tests/: test_anticheat.py  test_critics.py  test_curriculum.py  test_env_contract.py  test_rubrics.py  test_runway.py
training/: evaluate_vogen.py  generate_sample_plots.py  reward_aggregator.py  rollout.py  train_vogen.py  train_vogen_colab.ipynb  train_with_plots.py
training/configs/: grpo_default.yaml
